--- a/action.yml
+++ b/action.yml
@@ -22,7 +22,11 @@ runs:
     - name: Download and extract Julia
       run: |
         mkdir -p "${{ inputs.target-dir }}"
-        curl -LsS "${{ inputs.url }}" | tar -xz -C "${{ inputs.target-dir }}"
+        curl -LsS "${{ inputs.url }}" | tar -xz --strip-components=1 -C "${{ inputs.target-dir }}"
+      shell: bash
+
+    - name: Add to PATH
+      run: echo "${{ inputs.target-dir }}/bin" >> "$GITHUB_PATH"
       shell: bash
 
     - name: Print Version
