--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -14,5 +14,10 @@ jobs:
         with:
           url: https://s3.amazonaws.com/julialangnightlies/assert_pretesting/freebsd/x64/1.7/julia-4e6a3a4140-freebsd64.tar.gz
 
+      - name: Debugging
+        run: |
+          ls -la ~/julia
+          ls -la ~/julia/bin
+
       - name: Show versioninfo()
         run: julia -e "using InteractiveUtils; versioninfo()"
