--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -12,12 +12,7 @@ jobs:
       - name: Install Julia from URL
         uses: ./
         with:
-          url: https://s3.amazonaws.com/julialangnightlies/assert_pretesting/freebsd/x64/1.7/julia-4e6a3a4140-freebsd64.tar.gz
-
-      - name: Debugging
-        run: |
-          ls -la ~/julia
-          ls -la ~/julia/bin
+          url: https://julialangnightlies.s3.amazonaws.com/bin/linux/x64/1.6/julia-377aa809eb-linux64.tar.gz
 
       - name: Show versioninfo()
         run: julia -e "using InteractiveUtils; versioninfo()"
