--- a/action.yml
+++ b/action.yml
@@ -24,17 +24,11 @@ runs:
         mkdir -p "${{ inputs.target-dir }}"
         curl -LsS "${{ inputs.url }}" | tar -xz --strip-components=1 -C "${{ inputs.target-dir }}"
       shell: bash
-      
-    - name: Debug
-      run: |
-        ls -la ~/julia
-        ls -la ~/julia/bin
-      shell: bash
 
     - name: Add to PATH
       run: echo "${{ inputs.target-dir }}/bin" >> "$GITHUB_PATH"
       shell: bash
 
     - name: Print Version
-      run: ~/julia/bin/julia --version
+      run: julia --version
       shell: bash
